# frame_processor

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  how-to.txt
mac/: fp_conf.json  fp_conf_file.json  frame_processor
resource/: config_camera_source.txt
src/: CMakeLists.txt  config.cpp  config.hpp  config_params.hpp  default_scene_detector.cpp  dlib_source.cpp  frame_processor.cpp  logger.cpp  logger.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  processor.cpp  processor.hpp  scene.cpp  scene.hpp  simple_profiler.cpp  simple_profiler.hpp  stream.hpp
src/config/: app_config.cpp  app_config.hpp
src/fpcp/: fpcp.cpp  fpcp.hpp  fpcp_http.cpp  fpcp_http.hpp
src/fpcp_grpc/: fpcp.grpc.pb.cc  fpcp.grpc.pb.h  fpcp.pb.cc  fpcp.pb.h  fpcp_client.cpp  fpcp_client.hpp
src/frame_processing/: algorithms.hpp  box_overlap.cpp  box_overlap.hpp  default_scene_detector.cpp  default_scene_detector.hpp  face_detector.cpp  face_detector.hpp  file_scene_detector_listener.cpp  file_scene_detector_listener.hpp  fpcp_connector.cpp  fpcp_connector.hpp  fpcp_scene_detector_listener.cpp  fpcp_scene_detector_listener.hpp  frame_processor.cpp  grayscaler.hpp  haar_face_detector.cpp  haar_face_detector.hpp  haarcascade_frontalface_default_xml.cpp  haarcascade_frontalface_default_xml.hpp  helpers.cpp  helpers.hpp  hog_face_detector.cpp  hog_face_detector.hpp  image_processing.cpp  image_processing.hpp  multi_tracker.cpp  multi_tracker.hpp  naive_scene_detector.cpp  naive_scene_detector.hpp  naive_scene_detector_debugger.cpp  naive_scene_detector_debugger.hpp  object_detectors.hpp  object_tracker.cpp  scene_detector.cpp  scene_detector.hpp  scene_jsonify.cpp  scene_jsonify.hpp  show_stream_detector.cpp  show_stream_detector.hpp  uuid.cpp  (+3 more)
src/frame_processing1/: algorithms.hpp  box_overlap.cpp  box_overlap.hpp  default_scene_detector.cpp  default_scene_detector.hpp  face_detector.cpp  face_detector.hpp  file_scene_detector_listener.cpp  file_scene_detector_listener.hpp  fpcp_scene_detector_listener.cpp  fpcp_scene_detector_listener.hpp  grayscaler.hpp  haar_face_detector.cpp  haar_face_detector.hpp  haarcascade_frontalface_default_xml.cpp  hog_face_detector.cpp  hog_face_detector.hpp  multi_tracker.cpp  multi_tracker.hpp  naive_scene_detector.cpp  naive_scene_detector.hpp  naive_scene_detector_debugger.cpp  naive_scene_detector_debugger.hpp  scene_jsonify.cpp  scene_jsonify.hpp  show_stream_detector.cpp  show_stream_detector.hpp  uuid.cpp  uuid.hpp  vfile_scene_detector.cpp  vfile_scene_detector.hpp
src/recognizer/: dnn_face_recognition_model.cpp  dnn_face_recognition_model.hpp  recognition_manager.cpp  recognition_manager.hpp
src/video_streaming/: file_video_stream.cpp  file_video_stream.hpp  file_vstream_writer.cpp  image_window.cpp  image_window.hpp  webcam_video_stream.cpp  webcam_video_stream.hpp
